--- a/product/src/main/resources/application.yml
+++ b/product/src/main/resources/application.yml
@@ -12,7 +12,19 @@ spring:
   application:
     name: limmaProduct
   datasource:
-    url: jdbc:postgresql://localhost:5432/sapa
-    username: postgres
-    password: 123
+    url: jdbc:postgresql://localhost:5431/sapa?createDatabaseIfNotExist=true
+    username: sapa
+    password: sapa_pass
     driver-class-name: org.postgresql.Driver
+  jpa:
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    generate-ddl: true
+    show-sql: true
+    hibernate:
+      ddl-auto: update
+  jpa:
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    generate-ddl: true
+    show-sql: true
+    hibernate:
+      ddl-auto: update
