--- a/order/src/main/resources/application.yml
+++ b/order/src/main/resources/application.yml
@@ -12,7 +12,17 @@ spring:
   application:
     name: limmaOrder
   datasource:
-    url: jdbc:postgresql://localhost:5432/sapa
-    username: postgres
-    password: 123
+    url: jdbc:postgresql://localhost:5431/sapa?createDatabaseIfNotExist=true
+    username: sapa
+    password: sapa_pass
     driver-class-name: org.postgresql.Driver
+  jpa:
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    generate-ddl: true
+    show-sql: true
+    hibernate:
+      ddl-auto: update
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
+
