--- a/product/src/main/resources/application.yml
+++ b/product/src/main/resources/application.yml
@@ -22,9 +22,11 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: update
-  jpa:
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
-    generate-ddl: true
-    show-sql: true
-    hibernate:
-      ddl-auto: update
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
+springfox:
+  documentation:
+    swagger:
+      v2:
+        path:
