--- a/gateway-crm/src/main/resources/application.yml
+++ b/gateway-crm/src/main/resources/application.yml
@@ -37,6 +37,10 @@ spring:
           uri: ${REVIEW_SERVICE_URL:http://localhost:8086}
           predicates:
             - Path=/review/**
+        - id: FILE-SERVICE
+          uri: ${File_SERVICE_URL:http://localhost:7575}
+          predicates:
+            - Path=/storage/**
 #          filters:
 #            - StripPrefix=1
   r2dbc:
