--- a/catalog/src/main/resources/application.yml
+++ b/catalog/src/main/resources/application.yml
@@ -19,6 +19,12 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
+  jpa:
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    generate-ddl: true
+    show-sql: true
+    hibernate:
+      ddl-auto: update
   kafka:
     consumer:
       bootstrap-servers: localhost:9095
