--- a/file-storage/src/main/resources/application.yml
+++ b/file-storage/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 server:
   port: 7575
   servlet:
-    context-path: /file-storage
+    context-path: /storage
 eureka:
   instance:
     prefer-ip-address: true
@@ -12,9 +12,9 @@ spring:
   application:
     name: limmaMinio
   datasource:
-    url: jdbc:postgresql://localhost:5432/sapa
-    username: postgres
-    password: postgres
+    url: jdbc:postgresql://localhost:5431/sapa
+    username: sapa
+    password: sapa_pass
     driver-class-name: org.postgresql.Driver
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
