--- a/order/src/main/resources/application.yml
+++ b/order/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
   application:
     name: limmaOrder
   datasource:
-    url: jdbc:postgresql://localhost:5431/sapa?createDatabaseIfNotExist=true
+    url: jdbc:postgresql://localhost:5432/sapa?createDatabaseIfNotExist=true
     username: sapa
     password: sapa_pass
     driver-class-name: org.postgresql.Driver
@@ -24,5 +24,5 @@ spring:
       ddl-auto: update
   mvc:
     pathmatch:
-      matching-strategy: ant_path_matcher
+      matching-strategy: ANT_PATH_MATCHER
 
